@@ -13,18 +13,14 @@ python:
   - "3.6"
 before_install:
   - pip install pip -U
-  - pip install pytest -U
-  - pip install pytest-cov -U
-  - pip install codecov -U
-  - pip install xdoctest -U
-  - pip install pygments -U
-  - pip install -r requirements.txt
+  - pip install -r requirements/test.txt
+  - pip install -r requirements/runtime.txt
 install:
   - travis_retry pip install -e .
 script: 
-  #- travis_wait ./run_tests.py
+  - travis_wait ./run_tests.py
   #- travis_wait python run_tests.py
-  - travis_wait pytest -p no:doctest --cov-config .coveragerc --cov-report html --xdoctest --cov=progiter progiter
+  #- travis_wait pytest -p no:doctest --cov-config .coveragerc --cov-report html --xdoctest --cov=progiter progiter
 after_success: 
   #- coveralls || echo "Coveralls upload failed"
   - codecov 
