@@ -22,7 +22,8 @@ environment:
 install:
   # We need wheel installed to build wheels
   - "%PYTHON%\\python.exe -m pip install wheel"
-  - "%PYTHON%\\python.exe -m pip install -r requirements.txt -U"
+  - "%PYTHON%\\python.exe -m pip install -r requirements/test.txt -U"
+  - "%PYTHON%\\python.exe -m pip install -r requirements/runtime.txt -U"
   - "%PYTHON%\\python.exe -m pip install -e ."
 
 build: off
